<resources>
    <string name="app_name">Fitness60</string>
    <string name="app_name_with_space">Fitness 60</string>
    <string name="app_by">An App made by</string>
    <string name="name">\t\t\t\t\t\t\t\t\tShivam Dharme</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_workouts">My Workouts</string>
    <string name="workout_analysis">Workout Analysis</string>
    <string name="options">Options</string>
    <string name="start_workout">New Workout</string>

    <string name="utilize_a_timer">Utilize a Timer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="units">Units (Distance)</string>
    <string name="units2">Units (Weight)</string>
    <string name="km">km</string>
    <string name="miles">miles</string>
    <string name="lbs">lbs</string>
    <string name="kg">kg</string>

    <string name="set">SET</string>
    <string name="lbsC">LBS</string>
    <string name="kgchoice">KGS</string>
    <string name="reps">REPS</string>
    <string name="timer">TIMER</string>
    <string name="kmC">KM</string>
    <string name="milesC">MILES</string>
    <string name="add_set">ADD SET</string>
    <string name="remove_set">REMOVE SET</string>
    <string name="addA">NEW STANDARD ACTIVITY</string>
    <string name="removeA">REMOVE LAST ACTIVITY</string>
    <string name="distanceA">Distance Activity</string>
    <string name="bodyweightE">Bodyweight Exercise</string>

    <string name="Enter_workout">Enter your new activity</string>
    <string name="starting_workout">Starting Workout at: </string>
    <string name="defaultTime">00:00</string>
    <string name="weight">Weight</string>
    <string name="reps_text">Reps</string>
    <string name="distance_text">Distance</string>
    <string name="dateFormat">HH:mm:ss</string>
    <string name="addtl_weight">Additional Weight</string>
    <string name="return_home">Returned to Home</string>
    <string name="options_saved">Options saved</string>
    <string name="timer_option">timer_option</string>
    <string name="distance_option">distance_option</string>
    <string name="weight_option">weight_option</string>
    <string name="random_toast_message">A toast to type</string>
    <string name="options_data_filename">options_data</string>
    <string name="timer_on">Timer On</string>
    <string name="timer_off">Timer Off</string>
    <string name="km_unit_on">Using Kilometers as Distance Units</string>
    <string name="miles_unit_on">Using Miles as Distance Units</string>
    <string name="lbs_unit_on">Measuring in Pounds (lbs)</string>
    <string name="kg_unit_on">Measuring in Kilograms (kg)</string>
</resources>
