<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_logo"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/dumbbell_logo"
            android:title="@string/my_workouts" />
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/workout_analysis" />
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/options" />
    </group>

    <item android:title=""/>
    <item android:title=""/>
    <item android:title=""/>
    <item android:title=""/>
    <item android:title="@string/app_by"
        android:checkable="false" />
    <item android:title="@string/name"/>

</menu>
